NA-0: note on javafx.media in add-modules, why we need add-modules VM options